# eurocode-checks

./: README.md  VALIDATION.md  pyproject.toml
.github/workflows/: ci.yml
eurocheck/: __init__.py  __main__.py  cli.py  ec2_beam.py  ec3_member.py  sections.py
tests/: test_cli.py  test_ec2.py  test_ec2_shear_anchors.py  test_ec3.py  test_sections.py
