[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eurocheck"
version = "0.1.0"
description = "Educational EC2/EC3 member design checks (EN 1992-1-1 / EN 1993-1-1, UK NA). Not a certified design package."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Harvey Sohal", email = "harvey@sohal.info" }]
keywords = ["eurocode", "structural-engineering", "EC2", "EC3", "civil-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7"]

[project.scripts]
eurocheck = "eurocheck.cli:main"

[tool.setuptools.packages.find]
include = ["eurocheck*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
